force-app/main/default/objects/Opportunity/fields/Expected_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendance__c</fullName>
    <label>Expected Attendance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>