force-app/main/default/objects/Opportunity/fields/First__c.field-meta.xml
<CustomField>
    <fullName>First__c</fullName>
    <label>First Stay Date</label>
    <type>Date</type>
</CustomField>