force-app/main/default/objects/Opportunity/fields/How_Many_Night__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Night__c</fullName>
    <label>How Many Night?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Overnight_Event__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>