force-app/main/default/objects/Opportunity/fields/Last_Stay_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stay_Date__c</fullName>
    <label>Last Stay Date</label>
    <type>Date</type>
</CustomField>