force-app/main/default/objects/Opportunity/fields/Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Type__c</fullName>
    <label>Reservation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>