force-app/main/default/objects/Opportunity/fields/Resevation_Date__c.field-meta.xml
<CustomField>
    <fullName>Resevation_Date__c</fullName>
    <label>Resevation Date</label>
    <type>DateTime</type>
</CustomField>