force-app/main/default/objects/Opportunity/recordTypes/Individual_Guest.recordType-meta.xml
<RecordType>
    <fullName>Individual_Guest</fullName>
    <active>true</active>
    <businessProcess>Individuel Guests</businessProcess>
    <label>Individual Guest</label>
</RecordType>