force-app/main/default/objects/Opportunity/validationRules/Dissatisfaction_Reason_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Dissatisfaction_Reason_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Satisfied__c = false &amp;&amp;  ISBLANK( Dissaticfaction_Reason__c )</errorConditionFormula>
    <errorDisplayField>Dissaticfaction_Reason__c</errorDisplayField>
    <errorMessage>Dissatisfaction field can not be blank.</errorMessage>
</ValidationRule>