force-app/main/default/objects/Opportunity/validationRules/Early_Checkout_Reason_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Early_Checkout_Reason_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(Planned_Check_Out_Date__c &gt; Actual_Check_Out_Date__c)&amp;&amp; 
 ISBLANK( Dissaticfaction_Reason__c )</errorConditionFormula>
    <errorDisplayField>Early_Checkout_Reason__c</errorDisplayField>
    <errorMessage>Dissaticfaction Reason can not be blank.</errorMessage>
</ValidationRule>